fix: CI/CD環境の互換性問題を修正
- JavaバージョンをJava 21に統一
- Windows環境でのURI処理を修正
- integration-testsのプラットフォーム依存問題を解決

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>